src/style/infobox.css
/**** CSS for Kartlagfanen og alle dens underkomponenter *****/

/* --------------------------------------------------------------------------------- */
/* ---------------------- NEW INFOBOX COMPONENT ON THE SIDE ------------------------ */
/* --------------------------------------------------------------------------------- */

/* Topp-anker for infoboksen på side som justeres i forhold til Kartlagfanens bredde */
.infobox-container-side {
  position: absolute;
  height: 100%;
  left: 0px;
  top: 0px;
  width: 350px;
  background-color: white;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
  background: #eeeeee;
}

@media only screen and (max-width: 768px) {
  .infobox-container-side {
    position: absolute;
    top: 0px;
    height: 100vh;
    width: 100vw;
    z-index: 250;
  }
}

/* Main container infobox side panel */
.infobox-side {
  display: flex;
  flex-direction: column;
  width: 100%;
  background-color: #eee;
  max-height: 100vh;
  overflow-y: auto;
}
.all-layer-results-side {
  max-height: 400px;
}
.infobox-side,
.all-laye-results-side {
  width: 100%;
  max-width: 600px;
  text-align: center;
}

/* Infobox title */
.infobox-title-wrapper {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  background-color: #697f8a;
  color: white;
  width: 100%;
}
.infobox-title-content {
  display: flex;
  justify-content: flex-start;
  padding: 18px 0 15px 10px;
  max-width: calc(100% - 51px);
  width: calc(100% - 51px);
}
.infobox-title-text {
  margin-left: 10px;
  text-align: left;
  max-width: calc(100% - 51px);
  width: calc(100% - 51px);
  display: flex;
  flex-direction: column;
  overflow-wrap: break-word;
  word-wrap: break-word;
  -webkit-hyphens: auto;
  -ms-hyphens: auto;
  -moz-hyphens: auto;
  hyphens: auto;
}
.infobox-title-text-primary {
  font-size: 20px;
  font-weight: 550;
}
.infobox-title-text-secondary {
  font-size: 16px;
  text-transform: capitalize;
}

/* close legend button */
.close-infobox-button-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 0;
  width: 0;
  margin: 32px 29px 23px 22px;
  padding: 0;
  background-color: rgba(145, 163, 176, 0);
  border: none;
  border-radius: 10px;
  transition: background-color 0.2s, width 0.2s, height 0.2s, margin 0.2s;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}
.close-infobox-button-wrapper:hover {
  background-color: rgba(145, 163, 176, 0);
}
.close-infobox-button-wrapper:focus {
  background-color: rgba(145, 163, 176, 1);
  outline: none;
  height: 46px;
  width: 44px;
  margin: 9px 7px 0 0;
}
.close-infobox-button {
  padding: 0;
  display: flex;
  color: white;
  border: 2px solid white;
  border-radius: 5px;
}
.close-infobox-button:hover {
  background-color: rgba(145, 163, 176, 1);
}
@media only screen and (max-width: 768px) {
  .close-infobox-button-wrapper {
    z-index: 255;
  }
  .close-infobox-button {
    z-index: 255;
    position: absolute;
    top: 18px;
    right: 15px;
  }
}

/* Selected point description */
.infobox-content {
  display: flex;
  flex-direction: column;
  padding: 10px 10px 0 10px;
}
.infobox-text-wrapper {
  display: flex;
  align-items: flex-start;
  text-transform: capitalize;
  padding-bottom: 5px;
  font-size: 16px;
}
.infobox-text-wrapper svg {
  display: inline-block;
  vertical-align: text-top;
  margin-right: 10px;
  height: 20px;
  color: grey;
}
.infobox-text-multiple {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}
.infobox-text-primary {
  margin-top: 1px;
  text-align: left;
}
.infobox-text-secondary {
  color: grey;
  font-size: 14px;
  margin-top: 2px;
  text-align: left;
}

/* List with selected layers */
.detailed-info-container-side {
  background-color: #eee;
}
.layer-results-scrollable-side {
  display: inline-block;
  width: 100%;
}
.layer-results-side {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}
#layer-results-header {
  border-top: 3px solid grey;
  border-bottom: 1px solid grey;
}
#layer-results-header.MuiListItem-gutters {
  padding-left: 12px;
}
#layer-results-header .MuiListItemIcon-root {
  min-width: 56px;
}
#layers-results-list {
  padding-top: 0;
}

@media only screen and (max-width: 768px) {
  .infobox-side,
  .layer-results-side {
    margin-top: 0;
    width: 100%;
  }
  .layer-results-scrollable-side {
    display: inline-block;
    overflow-y: auto;
    width: 100%;
  }
}

/* Progress bar */
.layer-results-scrollable-loader {
  height: 20px;
  display: flex;
  align-items: center;
}
.MuiLinearProgress-barColorPrimary {
  background-color: #1976d2 !important;
}

/* List icons */
.infobox-list-icon-wrapper > .MuiCircularProgress-root {
  margin-right: 25px;
}
#infobox-list-icon {
  margin-left: 0;
}
.infobox-list-icon-wrapper .MuiBadge-root .MuiBadge-badge {
  font-size: 0.9rem;
  font-weight: 575;
}

#open-facts-icon.MuiSvgIcon-root {
  margin-left: 10px;
}
#open-facts-icon.MuiSvgIcon-colorPrimary {
  color: #777;
}

.infobox-list-icon-wrapper .MuiBadge-root .MuiBadge-colorPrimary {
  background-color: #cc0000;
  /* background-color: #E13D3E; */
  /* background-color: #777; */
}

/* list items in info box */
.generic-element-secondary-text {
  display: block;
  font-size: 11pt;
  color: #6d6d6d;
}
.generic-element-data-owner {
  display: block;
  font-size: 10pt;
  color: grey;
}
.layer-results-scrollable-side
  > .MuiList-root
  > .generic_element
  > .MuiListItem-root {
  padding: 0 12px;
}

@media only screen and (max-width: 768px) {
  .generic-element-primary-text {
    font-size: 11pt;
    margin: 1px 0 !important;
  }
  .generic-element-secondary-text {
    font-size: 10.5pt;
    margin: 1px 0 !important;
  }
  .generic-element-data-owner {
    font-size: 9.5pt;
    margin: 1px 0 !important;
  }
  .layer-results-scrollable-side
    > .MuiList-root
    > .generic_element
    > .MuiListItem-root
    > .MuiListItemIcon-root {
    min-width: 45px;
  }
}

/* åpne ekstra info knapp */
.search-layers-button-wrapper {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  padding: 10px 10px 10px 18px;
}
.search_layers:focus {
  border: 2px solid blue;
}
.infobox-switch-text {
  font-size: 14px;
}

/* Felt øverst et åpnet underelement  */
.infobox-text {
  font-size: 16px;
  display: block;
  text-transform: capitalize;
  text-align: left;
  margin: 5px 0;
}
.infobox-text:first-child svg {
  vertical-align: sub;
}

@media only screen and (max-width: 768px) {
  .infobox-text {
    max-width: calc(100% - 40px);
    font-size: 13px;
  }
}

/* Underelementets innhold  */
.generic_element {
  background-color: #eee;
}
.generic_element .MuiCollapse-container {
  background-color: #fff;
  margin: 0 !important;
  padding-top: 2px;
}
.generic_element div {
  margin-left: auto;
  margin-right: auto;
  margin-top: 5px;
  margin-bottom: 5px;
  max-width: 500px;
}
.generic_element .MuiButtonBase-root {
  margin-top: 0;
  margin-bottom: 0;
}

/* Facts information buttons */
#open-facts-info-button.MuiIconButton-colorPrimary {
  color: #666;
}

/* Facts information modal */
.facts-modal-body {
  display: flex;
  align-items: center;
  justify-content: center;
}

.facts-modal-buttons-div {
  display: flex;
}

.facts-modal-wrapper {
  background-color: white;
  width: 60vw;
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
  max-height: 95vh;
  overflow-y: auto;
}
@media only screen and (max-width: 768px) {
  .facts-modal-wrapper {
    width: 100vw;
    height: 100vh;
    min-height: 100vh;
    max-height: 100vh;
  }
}

.facts-modal-title {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: #697f8a;
  color: white;
  font-size: 26px;
  font-weight: bold;
  padding-left: 25px;
}
@media only screen and (max-width: 768px) {
  .facts-modal-title {
    font-size: 24px;
  }
}

.facts-modal-content {
  border: 0;
  width: 100%;
  min-height: 75vh;
  max-height: 100%;
  position: relative;
  overflow: none;
}
@media only screen and (max-width: 768px) {
  .facts-modal-content {
    min-height: 100%;
  }
}

/* Facts information modal - open in new window button */
#infobox-detail-facts.MuiButton-root {
  text-transform: none;
  margin: 19px 10px;
}
#infobox-detail-facts.MuiButton-root:hover {
  background-color: rgba(145, 163, 176, 1);
}
#infobox-detail-facts.MuiButton-outlinedPrimary {
  color: white;
  border-color: white;
}

